// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 27,
    "pedersen_builtin": 79,
    "range_check_builtin": 1879,
  },
  "n_memory_holes": 7841,
  "n_steps": 25830,
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 81,
    "pedersen_builtin": 85,
    "range_check_builtin": 1916,
  },
  "n_memory_holes": 17862,
  "n_steps": 27895,
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 81,
    "pedersen_builtin": 85,
    "range_check_builtin": 1854,
  },
  "n_memory_holes": 18159,
  "n_steps": 27534,
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 27,
    "pedersen_builtin": 79,
    "range_check_builtin": 1830,
  },
  "n_memory_holes": 8043,
  "n_steps": 25559,
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 1620,
    "pedersen_builtin": 402,
    "range_check_builtin": 27633,
  },
  "n_memory_holes": 318074,
  "n_steps": 220022,
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 1647,
    "pedersen_builtin": 408,
    "range_check_builtin": 27038,
  },
  "n_memory_holes": 327433,
  "n_steps": 223179,
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 1647,
    "pedersen_builtin": 408,
    "range_check_builtin": 26978,
  },
  "n_memory_holes": 327733,
  "n_steps": 222707,
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "builtin_instance_counter": {
    "bitwise_builtin": 1620,
    "pedersen_builtin": 402,
    "range_check_builtin": 27574,
  },
  "n_memory_holes": 318361,
  "n_steps": 219550,
}
`;
